[package]
name = "garb_graph_aptos"
version = "0.1.0"
edition = "2021"

[lib]
name = "garb_graph_aptos"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
tokio = "1.17.0"
petgraph = "0.6.0"
once_cell = "1.16.0"
async-std = "1.12.0"
garb_sync_aptos = { path = "../sync" }
num_cpus = "1.14.0"
kanal = "0.1.0-pre7"