[package]
name = "garb_aptos"
version = "0.1.0"
edition = "2021"

[dependencies]
garb_sync_aptos = { path = "../sync" }
garb_graph_aptos = { path = "../graph" }
aptos-sdk = {git = "https://github.com/aptos-labs/aptos-core", branch = "devnet"}
tokio = { version = "1.17.0", features = ["full"] }
tokio-metrics = "0.1.0"
anyhow = "1.0.66"
async-std = "1.12.0"
url = "2.3.1"
itertools = "0.10.5"
hex = "0.4.3"
num_cpus = "1.14.0"
kanal = "0.1.0-pre7"
tracing = "0.1.37"
clap = "4.0.29"
tracing-subscriber = "0.3.16"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"