[package]
name = "garb_sync_aptos"
version = "0.1.0"
edition = "2021"

[lib]
name = "garb_sync_aptos"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.21.2"
url = "2.3.1"
aptos-sdk = {git = "https://github.com/aptos-labs/aptos-core", branch = "devnet"}
anyhow = "1.0.66"
once_cell = "1.16.0"
async-std = "1.12.0"
serde = "1.0.147"
serde_json = "1.0.87"
kanal = "0.1.0-pre7"